<resources>
    <string name="app_name">ListSoma</string>
    <string name="action_settings">Settings</string>
    <string name="txt_item_lista">Item Da Lista</string>
    <string name="txt_preco">Preço</string>
    <string name="txt_quantidade">Quant</string>
    <string name="txt_lista_compras">Lista</string>
    <string name="txt_valor_total_compras">Total</string>
    <string name="message_conexao_criada_sucesso">Conexão criada com sucesso</string>
    <string name="text_action_ok_conexao">OK</string>
    <string name="title_aviso">Aviso</string>
    <string name="message_campos_invalidos">Por favor digite nome do Item. </string>
    <string name="message_campos_invalidosT">Por favor digite a tarefa. </string>
    <string name="lbl_validacao_ok">OK</string>
    <string name="title_action_ok_lista">OK</string>
    <string name="title_action_cancelar_lista">Cancelar</string>
    <string name="title_action_excluir_item">Excluir</string>
    <string name="title_activity_splash">SplashAct</string>
    <string name="title_action_excluir_tudo">Excluir todos os itens</string>
    <string name="btn_novalista">Nova Lista</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_add__relacao_list">Nova Lista e Relação de Listas</string>
    <string name="txt_rela_lista">Relação de Listas</string>
    <string name="lbl_nome_item"> Item</string>
    <string name="lbl_valor">$</string>
    <string name="lbl_quant">quant</string>
    <string name="lbl_nome_lista">Criar lista de compras</string>
    <string name="itens_title_excluirtudo">APAGAR</string>
    <string name="itens_title_excluirtudoDiv">APAGAR</string>
    <string name="item_message_extudo">Apagar todos os itens?</string>
    <string name="item_message_extudoT">Apagar todas as tarefas?</string>
    <string name="item_message_extudoDiv">Apagar todas as dividas?</string>
    <string name="button_item_sim">sim</string>
    <string name="button_item_exctudo_nao">não</string>
    <string name="lista_message_validacampo">Por favor informe o nome da lista</string>
    <string name="title_listas_del">Deletando Lista</string>
    <string name="message_listas_dell">Deletar sua(s) lista(s)?</string>
    <string name="text_listas_sim">sim</string>
    <string name="txt_listas_nao">não</string>
    <string name="title_adapteritem_delitem">Confirmação</string>
    <string name="message_adapteritem_delitem">Excluir este item?</string>
    <string name="text_adapteritem_delitem">Excluir</string>
    <string name="action_adapteritem_delitem">Excluido!</string>
    <string name="txtcancel_adapteritem_delitem">Cancelar</string>
    <string name="title_adapterlistas_dellista">Confirmação</string>
    <string name="msg_adapterlistas_dellista">Excluir esta Lista?</string>
    <string name="txt_adapterlistas_dellista">Excluir</string>
    <string name="action_adapterlistas_dellista">Excluida!</string>
    <string name="txtcancel_adapterlistas_dellista">Cancelar</string>
    <string name="title_activity_tela_informa">TelaInforma</string>

    <string name="app_intro_button_voltar">VOLTAR</string>
    <string name="app_intro_button_next">PROXIMO</string>
    <string name="tela_list_colun_item">Item</string>
    <string name="tela_list_colun_preco">R$</string>
    <string name="tela_list_colun_item_quant">Nº</string>
    <string name="tela_list_colun_cheque">Ok</string>
    <string name="title_activity_tutorial">Modo de usar</string>

    <string name="title_updt">Alterar nome da lista</string>
    <string name="title_updt_button">Alterar</string>
    <string name="gerarArquivoDivida">Arquivo das dívidas salvo na pasta Download do seu aparelho.
        Por favor, colocar o arquivo na pasta Download de outro aparelho, caso você importe o arquivo em outro dispositivo.</string>
    <string name="informativo_dividas">Click sobre a dívida que desejar atualizar.
        Nos três pontos no canto superior direito, você tem as opções: excluir todas as dívidas,
        gerar arquivo com todas as dívidas e importa o arquivo gerado.</string>

    <string name="aviso_importar_bkpdivida">Importar backup</string>
    <string name="importar_bkpdivida">Você deseja importar o arquivo de backup das dívidas?</string>
    <string name="import_bkp_msg_arquivo_não_existe">Arquivo das dívidas não existe na pasta Download do seu aparelho.
        Por favor, colocar o arquivo nesta pasta ou gerar o arquivo, caso a importação seja no mesmo aparelho.</string>

    <!--Teste
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id2">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id3">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id4">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id5">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_menuinicial">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_ltarefa">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_div_receber">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_interstitial_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstitial_compras">ca-app-pub-3940256099942544/1033173712</string>
    <string name="intersticial_compartilhar_listadecompras">ca-app-pub-3940256099942544/1033173712</string>
    <string name="intersticial_importa_listadecompras">ca-app-pub-3940256099942544/1033173712</string>
    <string name="intersticial_id_home_listcompras">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstitial_tarefa">ca-app-pub-3940256099942544/1033173712</string>
    <string name="intersticial_id_home_listtaref">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_interstitial_div">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_div_receber">ca-app-pub-3940256099942544/1033173712</string>-->

    <!-- Produção-->
    <string name="banner_ad_unit_id">ca-app-pub-9264013911597861/5225376560</string>
    <string name="banner_ad_unit_id2">ca-app-pub-9264013911597861/4666935375</string>
    <string name="banner_ad_unit_id3">ca-app-pub-9264013911597861/3259674309</string>
    <string name="banner_ad_unit_id4">ca-app-pub-9264013911597861/1104284255</string>
    <string name="banner_ad_unit_id5">ca-app-pub-9264013911597861/3297042521</string>
    <string name="banner_ad_unit_menuinicial">ca-app-pub-9264013911597861/4960641544</string>
    <string name="banner_ad_unit_ltarefa">ca-app-pub-9264013911597861/8451673309</string>
    <string name="banner_div_receber">ca-app-pub-9264013911597861/6157980203</string>
    <string name="admob_interstitial_id">ca-app-pub-9264013911597861/9237933253</string>
    <string name="admob_interstitial_compras">ca-app-pub-9264013911597861/7186889520</string>
    <string name="intersticial_importa_listadecompras">ca-app-pub-9264013911597861/8292840215</string>
    <string name="intersticial_compartilhar_listadecompras">ca-app-pub-9264013911597861/4471362310</string>
    <string name="intersticial_id_home_listcompras">ca-app-pub-9264013911597861/6848250859</string>
    <string name="admob_interstitial_tarefa">ca-app-pub-9264013911597861/1990403169</string>
    <string name="intersticial_id_home_listtaref">ca-app-pub-9264013911597861/5436216397</string>
    <string name="admob_interstitial_div">ca-app-pub-9264013911597861/7510323152</string>
    <string name="interstitial_div_receber">ca-app-pub-9264013911597861/6213820526</string>

    <string name="app_id">ca-app-pub-9264013911597861~6014594493</string>

    <string name="title_activity_list_t">List_t</string>
    <string name="title_activity_menu">Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add__relacao_lis_tare">Add_RelacaoLisTare</string>
    <string name="title_activity_rela__list__dividas">Rela_List_Dividas</string>
    <string name="title_activity_list__dividas">List_Dividas</string>
    <string name="title_activity_primeiro_cadastro_lcompras">PrimeiroCadastro_LCompras</string>
    <string name="title_activity_modo_de_usar">ModoDeUsar</string>

    <string name="storage_access_required">Este aplicativo requer acesso à memória para ler arquivos e planilhas do Excel</string>
    <string name="storage_access_denied">Por favor, vá para as configurações do aplicativo e conceda permissão de memória. </string>
    <string name="storage_unavailable">Seu dispositivo não suporta armazenamento</string>
    <string name="msg_arquivo_não_existe">Arquivo não foi baixado no aplicativo WhatSapp, por favor acessar a conversa do contato que compartilhou a lista com você, ou não existe o arquivo para importação.</string>

    <string name="hyperlink"><u>Compartilhe com os amigos</u></string>
    <string name="hyperlinkPago"><u>Adquira a versão sem propagandas.</u></string>
    <!-- link for practice textview-->
    <string name="hyperlink2"><a href="https://play.google.com/store/apps/details?id=com.lucianoalbuquerque18gmail.app.simplelist0110">Adquira a versão sem propagandas</a></string>
    <string name="title_activity_dividas_areceber">DividasAReceber</string>
    <string name="title_activity_gastos_avista">GastosAvista</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_teste">Teste</string>
    <string name="title_action_todas_listas">Todas as listas</string>
    <string name="title_add_list">ADICIONAR</string>
    <string name="action_voltar_add_list">VOLTAR</string>

</resources>
