<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ContrLaytEditCompr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0sp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0sp"
    android:orientation="vertical"
    tools:context=".Lista">

    <LinearLayout
        android:id="@+id/textViewlel"
        android:layout_width="0dp"
        android:elevation="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/contornofino"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewAddRelaListCompras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginTop="4dp"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/But_Compras">

        </com.google.android.gms.ads.AdView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="20dp"
            android:text="Adicionar nova lista de compras"
            android:textAllCaps="false"
            android:gravity="center_horizontal"
            android:textColor="@color/black_de"
            android:textSize="19sp"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/listTarefas_But"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:elevation="20dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/edtId_D"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />


            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edtNovaList_T">

                <Button
                    android:id="@+id/btnVoltar"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginRight="8dp"
                    android:elevation="10dp"
                    android:onClick="volta"
                    android:text="@string/action_voltar_add_list"
                    android:textStyle="bold"
                    app:srcCompat="@drawable/baseline_clear_black_36" />


                <Button
                    android:id="@+id/btnAddNovaLista"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:elevation="10dp"
                    android:onClick="onClick"
                    android:scrollbarThumbHorizontal="?attr/colorControlActivated"
                    android:text="@string/title_add_list"
                    android:textStyle="bold"
                    app:srcCompat="@drawable/baseline_save_black_36"
                    tools:ignore="OnClick" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/edtNovaList_DS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/textViewUpd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:text="Nome da lista"
                    android:textAllCaps="false"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/edtNovaList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nome da nova lista"
                    android:inputType="textCapSentences"
                    android:paddingLeft="20dp"
                    android:selectAllOnFocus="true"
                    android:singleLine="true"
                    android:textColorHighlight="?attr/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edtDataList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="Data"
                        android:inputType="date"
                        android:paddingLeft="15dp"
                        android:selectAllOnFocus="true"
                        android:textColorHighlight="?attr/colorPrimary"
                        android:textSize="15sp" />

                    <ImageButton
                        android:id="@+id/btnDataList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?attr/selectableItemBackground"
                        app:srcCompat="@drawable/baseline_date_range_black_36" />

                </LinearLayout>



            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>